...
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"/>


    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_profile_picture"
        android:hint="Full Name"
        android:layout_marginTop="80dp"/>

...
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@id/editTextPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
...
