...
            android:layout_marginBottom="20dp"
            android:text="@string/attendee"
            android:textSize="22sp"
            android:backgroundTint="#368C6E"/>

        <Button
            android:id="@+id/button_organizer_login"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/organizer"
            android:textSize="22sp"
            android:backgroundTint="#368C6E"/>
...
